# course_work_4_parser

./: .gitignore  README.md  data_vacancies.json  functions.py  hh_ru_api.py  job_site_api.py  json_saver.py  main.py  pyproject.toml  super_job_api.py  vacancy.py
