[tool.poetry]
name = "pythonproject18"
version = "0.1.0"
description = ""
authors = ["George Astakhov <goha1115@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
